[FIX] knowledge: remove scrollbar hack
- Remove the scrollbar hack
- Remove form sheet
- Set the breadcrumb in fix position

--- a/addons/knowledge/static/src/scss/knowledge_views.scss
+++ b/addons/knowledge/static/src/scss/knowledge_views.scss
@@ -1,39 +1,32 @@
 .o_knowledge_form_view {
-    .o_form_sheet {
-        max-width: none !important;
+    .o_knowledge_header,
+    .o_knowledge_aside {
+        background: white;
+    }
+    .o_knowledge_editor {
+        min-height: 100%;
+    }
+
+    .o_wysiwyg_wrapper {
         margin: 0 !important;
-        padding: 0 !important;
-        border: none !important;
+    }
+    .o_wysiwyg_resizer {
+        display: none;
     }
 
     .oe_form_field,
-    .o_wysiwyg_wrapper {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        margin: 0 !important;
+    .odoo-editor {
+        display: flex;
+        flex-direction: column;
+    }
+    .oe_form_field,
+    .odoo-editor,
+    .note-editable {
+        flex-grow: 1;
     }
     .note-editable {
         border: none;
-        border-top: 1px solid $o-gray-300;
-    }
-    .oe_form_field:not(.o_user_select_none) .note-editable {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0px;
-        bottom: 0;
         height: auto !important;
-        /* Hide pad scrollbar */
-        -ms-overflow-style: none;  /* IE and Edge */
-        scrollbar-width: none;  /* Firefox */
-    }
-
-    /* Hide pad scrollbar for Chrome, Safari and Opera */
-    .oe_form_field:not(.o_user_select_none) .note-editable::-webkit-scrollbar {
-      display: none;
     }
 
     aside {
@@ -60,22 +53,17 @@
         }
     }
 
-    .o_knowledge_form_right_panel {
-        overflow-y: auto;
-        overflow-x: hidden;
-
-        .o_knowledge_chatter_container {
-            border-top: 1px solid $o-gray-300;
-            li.nav-item {
-                display: none;
-            }
-            .o_FormRenderer_chatterContainer {
-                max-width: unset;
-                &.o-aside {
-                    width: auto;
-                    padding: 1rem;
-                    border-left: 0px;
-                }
+    .o_knowledge_chatter_container {
+        border-top: 1px solid $o-gray-300;
+        li.nav-item {
+            display: none;
+        }
+        .o_FormRenderer_chatterContainer {
+            max-width: unset;
+            &.o-aside {
+                width: auto;
+                padding: 1rem;
+                border-left: 0px;
             }
         }
     }
@@ -85,13 +73,6 @@
 
 @include media-breakpoint-up(md) {
     .o_knowledge_form_view {
-        .o_form_sheet {
-            position: absolute !important;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-        }
         .o_scroll_view {
             position: absolute;
             top: 0;
